--- a/mobile/android/rpm_android/app/src/main/res/layout/fragment_insurance_details.xml
+++ b/mobile/android/rpm_android/app/src/main/res/layout/fragment_insurance_details.xml
@@ -25,6 +25,7 @@
 
 
         <ScrollView
+            android:id="@+id/insurance_scrollview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
