--- a/mobile/android/rpm_android/app/src/main/res/layout/fragment_vital_readings.xml
+++ b/mobile/android/rpm_android/app/src/main/res/layout/fragment_vital_readings.xml
@@ -25,7 +25,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="@dimen/margin_20dp"
+                android:layout_marginTop="@dimen/margin_20dp"
+                android:layout_marginRight="@dimen/margin_20dp"
+                android:layout_marginBottom="@dimen/margin_20dp"
+                android:layout_marginLeft="@dimen/margin_10dp"
                 android:orientation="vertical">
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -89,20 +92,20 @@
                     android:layout_width="fill_parent" android:layout_height="fill_parent"
                     android:scrollbars="horizontal">
 
-                <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-                    xmlns:app="http://schemas.android.com/apk/res-auto"
-                    xmlns:tools="http://schemas.android.com/tools"
-                    android:id="@+id/fragmentVitalReadings"
-                    android:name="com.rpm.clynx.fragments.VitalReadingsFragment"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+                        xmlns:app="http://schemas.android.com/apk/res-auto"
+                        xmlns:tools="http://schemas.android.com/tools"
+                        android:id="@+id/fragmentVitalReadings"
+                        android:name="com.rpm.clynx.fragments.VitalReadingsFragment"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
 
-                    android:layout_marginRight="10dp"
-                    android:layout_marginBottom="16dp"
-                    app:layoutManager="LinearLayoutManager"
-                    tools:context="com.rpm.clynx.fragments.VitalReadingsFragment"
-                    tools:listitem="@layout/vital_readings_item_list"
-                    app:layout_constraintTop_toBottomOf="@+id/llo_notification" />
+                        android:layout_marginRight="10dp"
+                        android:layout_marginBottom="16dp"
+                        app:layoutManager="LinearLayoutManager"
+                        tools:context="com.rpm.clynx.fragments.VitalReadingsFragment"
+                        tools:listitem="@layout/vital_readings_item_list"
+                        app:layout_constraintTop_toBottomOf="@+id/llo_notification" />
                 </ScrollView>
                 <TextView
                     android:id="@+id/empty_viewvtlR"
