--- a/mobile/android/rpm_android/app/src/main/res/layout/new_fragment_vitals.xml
+++ b/mobile/android/rpm_android/app/src/main/res/layout/new_fragment_vitals.xml
@@ -50,6 +50,8 @@
                 app:layout_constraintTop_toTopOf="parent" />
         </android.widget.Toolbar>
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
     <LinearLayout
         android:id="@+id/headerdateview"
         android:layout_width="match_parent"
@@ -67,39 +69,44 @@
             android:layout_weight="1"
             android:layout_gravity="end"
             android:background="@color/transparent"
-            android:textColor="@color/todolist_color1"
-            android:src="@drawable/ic_outline_keyboard_arrow_left_24" />
+            android:src="@drawable/ic_outline_keyboard_arrow_left_24"
+            android:textColor="@color/todolist_color1" />
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"
-            android:layout_weight="4"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:orientation="horizontal">
+            android:layout_weight="8"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/VitalFragment_today_dt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text=""
-                android:textSize="16sp"
-                android:textColor="@color/todolist_color1"/>
-        </LinearLayout>
-
-        <ImageButton
-            android:id="@+id/nextdateonvitalnew"
+        <TextView
+            android:id="@+id/VitalFragment_today_dt"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_gravity="end"
-            android:background="@color/transparent"
-            android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
+            android:layout_weight="8"
+            android:gravity="center"
+            android:singleLine="true"
+            android:autoSizeTextType="uniform"
+            android:autoSizeMinTextSize="10sp"
+            android:autoSizeMaxTextSize="16sp"
+            android:autoSizeStepGranularity="1sp"
+            android:text="Sunday, Jan 28, 2022"
             android:textColor="@color/todolist_color1"/>
-
     </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/nextdateonvitalnew"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_gravity="end"
+        android:background="@color/transparent"
+        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
+        android:textColor="@color/todolist_color1"/>
+</LinearLayout>
 
     <LinearLayout
         android:id="@+id/header7D30D"
@@ -211,84 +218,54 @@
         </com.google.android.material.card.MaterialCardView>
     </LinearLayout>
 
+
+
     <FrameLayout
         android:id="@+id/fl_main"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="160dp"
         android:background="@color/background_grey1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
-        <LinearLayout
-            android:layout_marginTop="@dimen/margin_10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/background_grey1"
-            android:orientation="vertical">
+        app:layout_constraintTop_toTopOf="parent">
 
-            <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/background_grey1">
+
+            <!-- Parent RecyclerView -->
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/fragmentHTVitalReadings"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_10dp"
+                android:clipToPadding="false"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                android:scrollbars="horizontal"
+                app:layoutManager="LinearLayoutManager"
+                tools:listitem="@layout/vital_readings_item_list"/>
+
+
+            <!-- Empty view -->
+            <TextView
+                android:id="@+id/empty_viewnew"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_5dp"
-                android:layout_marginRight="@dimen/margin_5dp"
-                android:orientation="vertical">
+                android:layout_margin="@dimen/margin_10dp"
+                android:gravity="center"
+                android:visibility="gone"
+                android:text="@string/no_data_available"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/fragmentHTVitalReadings" />
 
-                <LinearLayout
-                    android:id="@+id/innerLay"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="@dimen/margin_10dp">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-                            xmlns:app="http://schemas.android.com/apk/res-auto"
-                            xmlns:tools="http://schemas.android.com/tools"
-                            android:id="@+id/fragmentHTVitalReadings"
-                            android:name="com.rpm.clynx.fragments.NewVitalFragment"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:background="@color/background_grey1"
-                            app:layoutManager="LinearLayoutManager"
-                            app:layout_constraintTop_toBottomOf="@+id/llo_goals"
-                            tools:context=".fragments.NewVitalFragment"
-                            tools:listitem="@layout/vital_readings_item_list" />
-                        <TextView
-                            android:id="@+id/empty_viewnew"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:layout_margin="@dimen/margin_10dp"
-                            android:gravity="center"
-                            android:visibility="gone"
-                            android:text="@string/no_data_available" />
-
-                        <TextView
-                            android:id = "@+id/viewMore"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@color/background1"
-                            android:padding="@dimen/margin_10dp"
-                            android:text="View More..."
-                            android:textColor="@color/Primary_dark"
-                            android:textSize="15sp"
-                            android:textStyle="normal" />
-                    </LinearLayout>
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-        </LinearLayout>
-
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
+
 
     <FrameLayout
         android:id="@+id/fl_sub7"
@@ -306,9 +283,9 @@
         <HorizontalScrollView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fillViewport="true"
             android:layout_marginLeft="3dp"
             android:layout_marginRight="10dp"
+            android:fillViewport="true"
             android:scrollbars="none">
 
             <LinearLayout
@@ -316,9 +293,9 @@
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:orientation="horizontal"
                 android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:orientation="horizontal">
+                android:paddingRight="10dp">
 
                 <!-- CardViews will be added dynamically here -->
 
