--- a/mobile/android/rpm_android/app/src/main/res/layout/vital_readings_item_list.xml
+++ b/mobile/android/rpm_android/app/src/main/res/layout/vital_readings_item_list.xml
@@ -1,59 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.rpm.clynx.fragments.VitalReadingsFragment">
+    tools:context="com.rpm.clynx.fragments.VitalReadingsFragment"
+    android:id="@+id/vitalsCard"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_marginTop="8dp"
+    android:layout_marginRight="8dp"
+    android:layout_marginBottom="8dp"
+    android:background="@drawable/vitals_card_bg_white"
+  >
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraint"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/profile_body_bg">
+<TextView
+android:id="@+id/itemvitalname"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:text="Blood Pressure"
+android:textSize="18sp"
+android:textStyle="normal"
+android:padding="@dimen/margin_10dp"
+android:textColor="@color/Primary_dark"
+android:background="@drawable/top_card_border"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+<androidx.recyclerview.widget.RecyclerView
+android:id="@+id/listReadngVitals"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:background="@android:color/transparent"
+app:layoutManager="LinearLayoutManager"
+tools:listitem="@layout/vital_readings_item" />
 
-            <TextView
-                android:id="@+id/itemvitalname"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:text="Blood Pressure"
-                android:textSize="18sp"
-                android:textStyle="normal"
-                android:padding="@dimen/margin_10dp"
-                android:textColor="@color/Primary_dark"
-                android:background="@drawable/top_card_border"/>
+<TextView
+android:id="@+id/empty_view1"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:gravity="center"
+android:visibility="gone"
+android:text="@string/no_data_available" />
 
-            <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:id="@+id/listReadngVitals"
-                android:name="com.rpm.clynx.fragments.ActivitySchedulesFragment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="3dp"
-                android:layout_marginRight="3dp"
-                android:background="@drawable/card_background_white"
-                app:layoutManager="LinearLayoutManager"
-                tools:context="com.rpm.clynx.fragments.ActivitySchedulesFragment"
-                tools:listitem="@layout/vital_readings_item"
-                app:layout_constraintTop_toBottomOf="@+id/llo_notification" />
-
-            <TextView
-                android:id="@+id/empty_view1"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:visibility="gone"
-                android:text="@string/no_data_available" />
-        </LinearLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</FrameLayout>
+<TextView
+android:id="@+id/viewMore"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:background="@color/background1"
+android:padding="@dimen/margin_10dp"
+android:text="View More..."
+android:textColor="@color/Primary_dark"
+android:textSize="15sp"
+android:gravity="start"
+android:textStyle="normal"/>
+    </LinearLayout>
