--- a/web/src/app/components/admin-dashboard/shared/side-panel-patient/side-panel-patient.component.html
+++ b/web/src/app/components/admin-dashboard/shared/side-panel-patient/side-panel-patient.component.html
@@ -2232,6 +2232,7 @@
               placeholder="Date"
               class="common_input_dropdown"
               formControlName="medicationstartDate"
+              [attr.min]="minStartDate"
             />
             <div class="warn">
               <ng-container
