--- a/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.html
+++ b/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.html
@@ -4858,7 +4858,8 @@
       *ngIf="http_ActivityScheduleData && http_ActivityScheduleData.length > 0"
     >
       <!-- btn_save -->
-      <button class="addCommonBtn" id="pd_SaveSch" (click)="saveCompleteTask()">
+      <button   *ngIf="rolelist[0]?.Id !== 8 && rolelist[0]?.Id !== 6" 
+      class="addCommonBtn" id="pd_SaveSch" (click)="saveCompleteTask()">
         Save
       </button>
     </div>
