--- a/web/src/app/components/admin-dashboard/shared/side-panel-patient/side-panel-patient.component.html
+++ b/web/src/app/components/admin-dashboard/shared/side-panel-patient/side-panel-patient.component.html
@@ -1784,7 +1784,7 @@
                   <div class="frequency_sub_panel">
                     <div class="schedule_week_item">
                       <input
-                        [readonly="AssigneeMemberStatus ? true : null"
+                        [readonly]="AssigneeMemberStatus ? true : null"
                         class="schedule_checkbox"
                         type="checkbox"
                         formControlName="scheduleSubThursday"
@@ -1812,7 +1812,7 @@
                     </div>
                     <div class="schedule_week_item">
                       <input
-                        [readonly="AssigneeMemberStatus ? true : null"
+                        [readonly]="AssigneeMemberStatus ? true : null"
                         class="schedule_checkbox"
                         type="checkbox"
                         formControlName="scheduleSubSaturday"
