medication-alignment and addsmstsble alignment

--- a/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.html
+++ b/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.html
@@ -4437,9 +4437,8 @@
 
           <ng-container matColumnDef="Description">
             <mat-header-cell *matHeaderCellDef> Remark </mat-header-cell>
-            <mat-cell *matCellDef="let element; let rowIndex = index">{{
-              element.Description
-            }}</mat-cell>
+            <mat-cell *matCellDef="let element; let rowIndex = index" [title]="element.Description ">
+              <span class="truncate-text">{{ element.Description }}</span></mat-cell>
           </ng-container>
 
           <!-- Action Column -->
