--- a/web/src/app/components/admin-dashboard/components/editpatient/editpatient.component.html
+++ b/web/src/app/components/admin-dashboard/components/editpatient/editpatient.component.html
@@ -782,6 +782,11 @@
                       id="addPatientAdditionalNotes"
                       maxlength="500"
                     ></textarea>
+                    <span *ngIf="PatientInfoForm.get('additionalnotes')?.value?.length >= 500"
+                        style="color: red; margin-left: 10px;">
+                       ⚠️ Max length 500 reached.
+                        </span>
+
                   </div>
             </div>
 
