--- a/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.scss
+++ b/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.scss
@@ -3598,7 +3598,7 @@ li + li {
 
 .progress-fill {
   height: 100%;
-
+background-color: hsl(40, 74%, 60%);
   transition: width 0.3s ease-in-out;
   border-radius: 5px;
 }
