--- a/web/src/app/components/admin-dashboard/components/team-page/team-page.component.html
+++ b/web/src/app/components/admin-dashboard/components/team-page/team-page.component.html
@@ -550,7 +550,7 @@
         id="team_taskDueToday"
         (click)="getTaskdetailData('DueToday', 1)"
       >
-        <p class="upperpanel_subtitle">Task Due Today</p>
+        <p class="upperpanel_subtitle">Task Due</p>
         <p class="upperpanel_subBox_value">
           {{ http_task_list ? taskduetodayCount : 0 }}
         </p>
